# semantic-sql

./: .gitignore  404.html  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  environment.sh  index.html  install.Makefile  mkdocs.yml  ontologies.Makefile  package-lock.json  pyproject.toml  requirements.txt  search.html  setup.py  sitemap.xml  tox.ini
.claude/: .mcp.json
AllProblems/: index.html
AnnotationPropertyNode/: index.html
AnonymousClassExpression/: index.html
AnonymousExpression/: index.html
AnonymousIndividualExpression/: index.html
AnonymousPropertyExpression/: index.html
AsymmetricPropertyNode/: index.html
AxiomDbxrefAnnotation/: index.html
BaseTable/: index.html
BlankNode/: index.html
ClassNode/: index.html
ClassTrait/: index.html
CountOfInstantiatedClasses/: index.html
CountOfPredicates/: index.html
CountOfSubclasses/: index.html
DeprecatedNode/: index.html
Edge/: index.html
EntailedEdge/: index.html
EntailedEdgeCycle/: index.html
EntailedEdgeSamePredicateCycle/: index.html
Export/: index.html
HasBroadMatchStatement/: index.html
HasBroadSynonymStatement/: index.html
HasDbxrefStatement/: index.html
HasExactMatchStatement/: index.html
HasExactSynonymStatement/: index.html
HasMappingStatement/: index.html
HasMatchStatement/: index.html
HasNarrowMatchStatement/: index.html
HasNarrowSynonymStatement/: index.html
HasOioSynonymStatement/: index.html
HasRelatedMatchStatement/: index.html
HasRelatedSynonymStatement/: index.html
HasSynonymStatement/: index.html
HasTextDefinitionStatement/: index.html
IndividualTrait/: index.html
IriNode/: index.html
IrreflexivePropertyNode/: index.html
IsReport/: index.html
LexicalProblem/: index.html
LiteralAsStringType/: index.html
NamedIndividualNode/: index.html
Node/: index.html
NodeIdType/: index.html
NodeToNodeStatement/: index.html
NodeToValueStatement/: index.html
NodeTrait/: index.html
NodeWithTwoLabelsProblem/: index.html
ObjectPropertyNode/: index.html
OntologyNode/: index.html
OntologyStatusStatement/: index.html
OwlAllValuesFrom/: index.html
OwlAxiom/: index.html
OwlAxiomAnnotation/: index.html
OwlComplexAxiom/: index.html
(+320 files in other folders)
