[build-system]
requires = ["hatchling>=1.26.3"]
build-backend = "hatchling.build"

[project]
name = "semsql"
version = "0.4.2"
description = "Transform OWL/RDF ontologies into SQLite databases with standardized SQL views."
authors = [{ name = "cmungall", email = "cjm@berkeleybop.org" }]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
  "click>=8.1.3,<9",
  "linkml-runtime>=1.2.15",
  "requests>=2.31.0",
  "SQLAlchemy>=1.4,<3",
  "SQLAlchemy-Utils>=0.38.2",
  "PyYAML>=6.0.1",
  "ruamel.yaml>=0.17.0",
  "rdflib>=6.3.2",
]

[dependency-groups]
dev = [
  "black",
  "tox",
  "pytest",
  "mkdocs>=1.3.0",
  "linkml>=1.7.4",
  "mkdocs-mermaid2-plugin>=0.6.0",
  "jupyter>=1.0.0",
  "ipython-sql>=0.4.1",
]

[project.scripts]
semsql = "semsql.builder.cli:main"
gen-semsql-views = "semsql.sqlutils.viewgen:cli"

[tool.hatch.build]
exclude = [
  "**/.#*",
  "**/#*#",
  "**/__pycache__/**",
  "**/*.pyc",
]

[tool.hatch.build.targets.wheel]
packages = ["src/semsql"]

[tool.hatch.build.targets.sdist]
include = [
  "src/semsql",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]
